core/stdlib/tests/ui/covering_include_sort_field.stderr
error: `price` is the sort field тАФ it is already covered for free; drop it from `include`
 --> tests/ui/covering_include_sort_field.rs:5:57
  |
5 | #[index(cheapest, by = active, sort = price, include = (price, title))]
  |                                                         ^^^^^
